--- a/src/main/css/style.css
+++ b/src/main/css/style.css
@@ -16,3 +16,9 @@
     user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
+
+html {
+    overflow-y: auto
+}
+
+svg {width: 100%; height: auto;}
